derived_key: first implementation
